--- a/static/style.css
+++ b/static/style.css
@@ -4,39 +4,62 @@ body{
 }
 
 #err_msg {
-	background-color: rgba(255, 0, 0, 0.5);
-	color: white;
+	background-color: rgba(50, 50, 50, 0.8);
+	color: #d3d3d3;
 	font-size: 12px;
 	font-family: Arial, Helvetica, sans-serif;
 	text-align: center;
 	position: relative;
-	border-radius: 10px;
-	width: 80%;
-	max-width: 400px;
+	max-width: 300px;
 	padding: 5px 5px;
 	margin: 5px auto;
 }
 
-#control {
-	background-color: rgba(100, 100, 100, 0);
-	border-radius: 50px;
+#control{
+	background-color: rgba(50, 50, 50, 0.8);
 	position: relative;
-	width: 40px;
-	height: 40px;
+	width: 200px;
+	height: 35px;
 	margin: 5px auto;
 }
-#control:hover {
-  cursor: pointer;
-}
-#control img {
+#control p{
+	color: #d3d3d3;
+	font-size: 12px;
+	font-family: Arial, Helvetica, sans-serif;
 	position: absolute;
-	width:100%;
+	padding: 0px 0px;
+	margin: 0px 0px;
+	top: 4px;
+	left: 35px;
+	width: 100px;
 }
 
+#play {
+	background-color: rgba(100, 100, 100, 0);
+	border-radius: 50px;
+	position: absolute;
+	top: 3px;
+	left: 5px;
+	width: 22px;
+	height: 22px;
+	margin: 5px auto;
+}
+#play:hover {
+  cursor: pointer;
+}
+#play img {
+	position: absolute;
+	width:100%;
+	opacity: 1;
+}
+
+
 #volume_div {
-	background-color: rgba(100, 100, 100, 0.8);
+	background-color: rgba(100, 100, 100, 0);
 	border-radius: 10px;
-	position: relative;
+	position: absolute;
+	top: 6px;
+	left: 130px;
 	width: 70px;
 	height: 15px;
 	margin: 5px auto;
@@ -46,6 +69,7 @@ body{
 	top: 0px;
 	left: 4px;
 	height: 15px;
+	opacity: 0.7;
 }
 #volume {
   -webkit-appearance: none;
