updated ui for no web audio api support

--- a/static/style.css
+++ b/static/style.css
@@ -33,6 +33,14 @@ body{
 	left: 35px;
 	width: 100px;
 }
+#control audio{
+	position: absolute;
+	width: 190px;
+	height: 25px;
+	top: 5px;
+	left: 5px;
+	opacity: 0.7;
+}
 
 #play {
 	background-color: rgba(100, 100, 100, 0);
