--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,18 @@ body{
 	margin: 0px 0px;
 }
 
+#enterDiv {
+  width: 100%;
+  height: 100%;
+}
+#enterDiv p{
+	color: #d3d3d3;
+	font-size: 48px;
+	font-family: Arial, Helvetica, sans-serif;
+  text-align: center;
+  cursor: pointer;
+}
+
 #err_msg {
 	background-color: rgba(50, 50, 50, 0.8);
 	color: #d3d3d3;
